tests/baselines/reference/genericSpecializations2.errors.txt
tests/cases/compiler/genericSpecializations2.ts(8,5): error TS2421: Class member of type '<string>(x: string) => string' is not assignable to implementing interface member of type '<T>(x: T) => T'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'T' is not assignable to type 'string'.
tests/cases/compiler/genericSpecializations2.ts(8,9): error TS2368: Type parameter name cannot be 'string'.
tests/cases/compiler/genericSpecializations2.ts(12,5): error TS2421: Class member of type '<string>(x: string) => string' is not assignable to implementing interface member of type '<T>(x: T) => T'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'T' is not assignable to type 'string'.
tests/cases/compiler/genericSpecializations2.ts(12,9): error TS2368: Type parameter name cannot be 'string'.


==== tests/cases/compiler/genericSpecializations2.ts (4 errors) ====
    class IFoo<T> {
        foo<T>(x: T): T { // no error on implementors because IFoo's T is different from foo's T
            return null;
        }
    }
    
    class IntFooBad implements IFoo<number> {
        foo<string>(x: string): string { return null; }
        ~~~
!!! error TS2421: Class member of type '<string>(x: string) => string' is not assignable to implementing interface member of type '<T>(x: T) => T'.
!!! error TS2421:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2421:     Type 'T' is not assignable to type 'string'.
            ~~~~~~
!!! error TS2368: Type parameter name cannot be 'string'.
    }
    
    class StringFoo2 implements IFoo<string> {
        foo<string>(x: string): string { return null; }
        ~~~
!!! error TS2421: Class member of type '<string>(x: string) => string' is not assignable to implementing interface member of type '<T>(x: T) => T'.
!!! error TS2421:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2421:     Type 'T' is not assignable to type 'string'.
            ~~~~~~
!!! error TS2368: Type parameter name cannot be 'string'.
    }
    
    class StringFoo3 implements IFoo<string> {
        foo<T>(x: T): T { return null; }
    }
    
    